--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -6,6 +6,7 @@ body {
 .small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
+  font-size: 22px
 }
 
 .small-para {
@@ -13,11 +14,14 @@ body {
   font-weight: 800;
 }
 
-.para {
+/* .para {
   font-size: 22px;
-}
+} */
 
-.confirm {
+
+
+
+#confirm-button {
   background: green;
   color: white;
   font-weight: bold;
@@ -35,7 +39,7 @@ body {
   font-size: 14px;
 }
 
-div.text {
+div .child {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
